trying to add the weather forecast column with html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
           </li>
         </ul>
       </main>
+      <div class="weather-forecast">
+        <div>
+          <div class="col-2">Thu</div>
+
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/2815/2815428.png"
+            width="36"
+          />
+          <br />
+          18 12
+        </div>
+      </div>
+
       <br/ >
       <footer>
         This cute weather application is coded by
