--- a/index.html
+++ b/index.html
@@ -3,87 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>più meteo</title>
-    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Meteo App</title>
   </head>
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-area" id="search-area">
+        <form class="search-form" id="search-form">
           <input
             type="search"
-            placeholder="Enter a city ..."
+            placeholder="Enter a city.."
             required
-            class="search-input"
-            id="search-input"
+            id="search-form-input"
+            class="search-form-input"
           />
-          <input type="submit" value="Search" class="search-button" />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
-      <br/ >
       <main>
-        <div class="main-weather-area">
-          <div class="currently">It is currently</div>
-          <span class="big-temp"
-            ><span id="big-temp">22</span><span class="degrees">°C</span></span
-          >
-          <span class="big-icon" id="icon"></span>
-          <span class="city">in <strong id="city"></strong></span>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city" id="city"></h1>
+            <p class="weather-app-details">
+              <span id="time"></span>,
+              <span id="description"></span>
+              <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-
-        <ul class="weather-condition-group">
-          <li class="date specific-weather-description" id="time"></li>
-          <li class="weather-description specific-weather-description">
-            🌨️<br/ ><span id="description">scattered clouds</span>
-          </li>
-          <li class="weather-conditions specific-weather-description">
-            Humidity <span id="humidity"></span><br />Wind
-            <span id="speed"></span>
-          </li>
-        </ul>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
-      <div class="weather-forecast">
-        <div>
-          <div class="col-2">Thu</div>
 
-          <img
-            src="https://cdn-icons-png.flaticon.com/512/2815/2815428.png"
-            width="36"
-          />
-          <br />
-          18 12
-        </div>
-      </div>
-
-      <br/ >
       <footer>
-        This cute weather application is coded by
-        <a
-          href="https://github.com/finjagrg"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Finja Görg</a
-        >, open sourced on
-        <a
-          href="https://github.com/finjagrg/piu-meteo"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Github</a
+        This project was coded by
+        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
+        is
+        <a href="https://github.com/matthieua/meteo" target="_blank"
+          >open-sourced on GitHub</a
         >
-        and hosted on
-        <a
-          href="https://zimtstern.netlify.app/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Netlify</a
-        >.
+        and
+        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
       </footer>
     </div>
     <script src="index.js"></script>
